[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tui-textarea = "0.7.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[target.window]
linker = "x86_64-pc-windows-gnu"
rustflags = ["-C", "target-feature=+crt-static"]


[[bin]]
name = "todo"
path = "src/main.rs"
