[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tui-textarea = "0.7.0"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[[bin]]
name = "todo"
path = "src/main.rs"
